force-app/main/default/objects/custom_create144__c/custom_create144__c.object-meta.xml
<CustomObject>
    <label>Custom created object144</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects144</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>