force-app/main/default/objects/custom_create144__c/fields/custom_create_144field518__c.field-meta.xml
<CustomField>
    <fullName>custom_create_144field518__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 144field518</label>
    <type>Checkbox</type>
</CustomField>